updated footer and ids

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -44,29 +44,29 @@
         <li class="hitems"><a href="#skills">SKILLS</a></li>
         <li class="hitems"><a href="#projects">PROJECTS</a></li>
         <li class="hitems"><a href="#contact">CONTACT</a></li>
-        <li class="hitems"><a href="#resume">RESUME</a></li>
+        <li class="hitems"><a href="#">RESUME</a></li>
       </div>
       <!-- end of nav -->
 
       <!-- start of hero -->
       <main class="hero-container">
         <div class="hero-image-container">
-          <img class="hero-image" src="img/main-image.svg" alt="" />
+          <img class="hero-image" src="img/main-image.svg" alt="my photo" />
         </div>
 
         <div class="hero-details">
           <h2 class="hello">Hello! I'm</h2>
           <h1 class="hero-name">John Michael Basalo</h1>
           <h3 class="webdev">Full-Stack Web Developer</h3>
-          <a class="hero-btn" href="#">CONTACT ME</a>
+          <a class="hero-btn" href="#contact">CONTACT ME</a>
         </div>
       </main>
     </header>
     <!-- end of hero -->
 
     <!-- start of about me -->
-    <div class="about-me-container">
-      <h4 class="about-me-title" id="about">ABOUT ME</h4>
+    <div class="about-me-container" id="about">
+      <h4 class="about-me-title" >ABOUT ME</h4>
       <div class="about-me-details">
         <p class="about-me-info">
           I'm a newbie web developer with a strong passion for full-stack web
@@ -90,8 +90,8 @@
     <!-- end of about me -->
 
     <!-- start of skills -->
-    <div class="skill-container">
-      <h4 class="skill-title" id="skills">MY <span>SKILLS</span></h4>
+    <div class="skill-container" id="skills">
+      <h4 class="skill-title" >MY <span>SKILLS</span></h4>
       <img class="monitor" src="img/laptop.png" alt="" />
       <div class="skill-image">
         <img class="css" src="img/css logo.svg" alt="" />
@@ -103,8 +103,8 @@
     <!-- end of skills -->
 
     <!-- start of projects -->
-    <div class="article-container">
-      <h4 class="article-title" id="projects">PROJECTS</h4>
+    <div class="article-container" id="projects">
+      <h4 class="article-title" >PROJECTS</h4>
       <section class="article-items">
         <div class="article-details">
           <img src="img/comingsoon.svg" alt="" />
@@ -140,7 +140,7 @@
     <!-- end of projects -->
 
     <!-- start of forms -->
-    <div class="ctaform-container">
+    <div class="ctaform-container" id="contact">
       <div class="cta-ctr">
         <h4 class="cta-title">CONTACT ME</h4>
         <ul class="cta-info">
