--- a/MP1/index.html
+++ b/MP1/index.html
@@ -17,12 +17,8 @@
     <!-- start of nav -->
     <header class="header-container">
       <nav class="header-menu">
-        <div class="header-logo-container">
-          <img
-            class="header-logo"
-            src="img/CODE KHAILEIDOSCOPE.svg"
-            alt="logo"
-          />
+        <div class="header-logo-container" id="home-logo">
+          <img class="header-logo" src="img/newest-logo-y.svg" alt="logo" />
         </div>
 
         <ul class="header-items">
@@ -66,7 +62,7 @@
 
     <!-- start of about me -->
     <div class="about-me-container" id="about">
-      <h4 class="about-me-title" >ABOUT ME</h4>
+      <h4 class="about-me-title">ABOUT ME</h4>
       <div class="about-me-details">
         <p class="about-me-info">
           I'm a newbie web developer with a strong passion for full-stack web
@@ -91,7 +87,7 @@
 
     <!-- start of skills -->
     <div class="skill-container" id="skills">
-      <h4 class="skill-title" >MY <span>SKILLS</span></h4>
+      <h4 class="skill-title">MY <span>SKILLS</span></h4>
       <img class="monitor" src="img/laptop.png" alt="" />
       <div class="skill-image">
         <img class="css" src="img/css logo.svg" alt="" />
@@ -104,7 +100,7 @@
 
     <!-- start of projects -->
     <div class="article-container" id="projects">
-      <h4 class="article-title" >PROJECTS</h4>
+      <h4 class="article-title">PROJECTS</h4>
       <section class="article-items">
         <div class="article-details">
           <img src="img/comingsoon.svg" alt="" />
@@ -223,30 +219,30 @@
 
     <!-- start of footer -->
     <footer>
-      <h5>Khaileidoscope&copy;</h5>
+      <h5><a href="#home-logo">Khaileidoscope&copy;</a></h5>
       <ul class="f-icons">
         <li>
-          <a href="#">
+          <a href="https://www.facebook.com" target="_blank">
             <i class="fa-brands fa-square-facebook"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://wwww.linkedin.com" target="_blank">
             <i class="fa-brands fa-linkedin"></i>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="fa-brands fa-square-x-twitter"></i>
+          <a href="https://www.x.com">
+            <i class="fa-brands fa-square-x-twitter" target="_blank"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://www.instagram.com" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="https://github.com/khaileidoscope" target="_blank">
             <i class="fa-brands fa-square-github"></i>
           </a>
         </li>
