removed form title email me

--- a/MP1/index.html
+++ b/MP1/index.html
@@ -156,7 +156,7 @@
       </div>
 
       <div class="form-ctr">
-        <h3 class="form-title">E-mail Us</h3>
+        <!-- <h3 class="form-title">Email Me</h3> -->
         <form class="form-details" action="">
           <p>
             <label for="name">Full Name</label>
