updated html title

--- a/MP1/index.html
+++ b/MP1/index.html
@@ -11,7 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>My Portfolio</title>
+    <title>Khaileidoscope's Portfolio</title>
   </head>
   <body>
     <!-- start of nav -->
