updated index.html and added line 15

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <li>
         <a href="14-module1_final_activity/">14 - module1_final_activity</a>
       </li>
+      <li>
+        <a href="15-javascript_fundamentals/">15 - javascript_fundamentals</a>
+      </li>
       <li><a href="MP1/">MP1 - Major Project 1</a></li>
     </ul>
   </body>
