--- a/index.html
+++ b/index.html
@@ -83,6 +83,19 @@
           <a href="15-javascript_fundamentals/">15 - javascript_fundamentals</a>
         </li>
         <li>
+          <a href="16-javascript_basic_data_types/"
+            >16 - javascript_basic_types</a
+          >
+        </li>
+        <li>
+          <a href="17-javascript_conditionals/">
+            17 - Javascript_Conditionals</a
+          >
+        </li>
+      </ul>
+
+      <ul>
+        <li>
           <a href="MP1/">MP1 - Major Project 1</a>
         </li>
       </ul>
