added new line on index.html

--- a/18-activity/index.html
+++ b/18-activity/index.html
@@ -6,6 +6,7 @@
     <title>JavaScript Activity</title>
   </head>
   <body>
+    <h1>RELOAD ME and INSPECT ELEMENT</h1>
     <script src="main.js"></script>
   </body>
 </html>
