--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
             17 - Javascript_Conditionals</a
           >
         </li>
+        <li>
+          <a href="18-activity/">18 - Activity</a>
+        </li>
       </ul>
 
       <ul>
