added new line on index.html

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         <li>
           <a href="18-activity/">18 - Activity</a>
         </li>
+        <li>
+          <a href="18-javascript_operators/">18 - JavaScript_Operators</a>
+        </li>
       </ul>
 
       <ul>
