--- a/20-array_and_loops/index.html
+++ b/20-array_and_loops/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JavaScript Array of Strings</title>
+    <title>Arrays and Loops</title>
   </head>
   <body>
     <script src="main.js"></script>
