--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
         <li>
           <a href="18-javascript_operators/">18 - JavaScript_Operators</a>
         </li>
+        <li>
+          <a href="19-problem-solving/">19 - Problem Solving</a>
+        </li>
+        <li>
+          <a href="20-array_and_loops/">20 - Array and Loops</a>
+        </li>
+        <li>
+          <a href="21-RPS_javascript/">21 - Rock, Paper, & Scissor</a>
+        </li>
       </ul>
 
       <ul>
