updated and added new lines to index.html

--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
         <li>
           <a href="21-RPS_javascript/">21 - Rock, Paper, & Scissor</a>
         </li>
+        <li>
+          <a href="22-errors_and_clean_code/">22 - Errors and Clean Code</a>
+        </li>
+        <li>
+          <a href="23-dom_manipulation_&_events/"
+            >23 - DOM Manipulation and Events</a
+          >
+        </li>
       </ul>
 
       <ul>
