added animation inside main.js

--- a/24-rock_paper_scissor_game/RPSG/index.html
+++ b/24-rock_paper_scissor_game/RPSG/index.html
@@ -29,8 +29,8 @@
         <!-- turns container -->
         <section class="turns-container">
           <div class="player-turn-container">
-            <div id="player-turn-image">
-              <img src="img/player-rock.svg" alt="player-rock" />
+            <div class="player-turn">
+              <img src="img/rockPlayer.svg" alt="player-rock" />
             </div>
             <h4>YOU</h4>
           </div>
@@ -38,8 +38,8 @@
             <img src="img/versus.svg" alt="" />
           </div>
           <div class="computer-turn-container">
-            <div id="computer-turn-image">
-              <img src="img/computer-rock.svg" alt="computer-rock" />
+            <div class="computer-turn">
+              <img src="img/rockComputer.svg" alt="computer-rock" />
             </div>
             <h4>COMPUTER</h4>
           </div>
@@ -54,9 +54,9 @@
 
       <!-- weapons container -->
       <section class="weapons-container">
-        <button id="rock-btn">Rock</button>
-        <button id="paper-btn">Paper</button>
-        <button id="scissor-btn">Scissor</button>
+        <button type="button">Rock</button>
+        <button type="button">Paper</button>
+        <button type="button">Scissor</button>
       </section>
     </div>
     <script src="main.js"></script>
