partially finish RPSG activity

--- a/24-rock_paper_scissor_game/RPSG/index.html
+++ b/24-rock_paper_scissor_game/RPSG/index.html
@@ -54,9 +54,9 @@
 
       <!-- weapons container -->
       <section class="weapons-container">
-        <button type="button">Rock</button>
-        <button type="button">Paper</button>
-        <button type="button">Scissor</button>
+        <button type="button">ROCK</button>
+        <button type="button">PAPER</button>
+        <button type="button">SCISSOR</button>
       </section>
     </div>
     <script src="main.js"></script>
