updated index.html file

--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
             >23 - DOM Manipulation and Events</a
           >
         </li>
+        <li>
+          <a href="24-rock_paper_scissor_game/"
+            >24 - Rock Paper Scissors Game</a
+          >
+        </li>
+        <li>
+          <a href="24-rock_paper_scissor_game/RPSG/">24 - RPSG Activity</a>
+        </li>
       </ul>
 
       <ul>
