--- a/25-async_javascript_exercises/index.html
+++ b/25-async_javascript_exercises/index.html
@@ -6,6 +6,7 @@
     <title>JavaScript Exercises</title>
   </head>
   <body>
-    <script src="problem1.js"></script>
+    <!-- <script src="problem1.js"></script> -->
+    <script src="problem2.js"></script>
   </body>
 </html>
