--- a/25-async_javascript_exercises/index.html
+++ b/25-async_javascript_exercises/index.html
@@ -6,7 +6,10 @@
     <title>JavaScript Exercises</title>
   </head>
   <body>
+    <h1>JavaScript Exercises</h1>
     <!-- <script src="problem1.js"></script> -->
-    <script src="problem2.js"></script>
+    <!-- <script src="problem2.js"></script> -->
+    <!-- <script src="problem3.js"></script> -->
+    <script src="problem4.js"></script>
   </body>
 </html>
