--- a/25-async_javascript_exercises/index.html
+++ b/25-async_javascript_exercises/index.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <h1>JavaScript Exercises</h1>
-    <!-- <script src="problem1.js"></script> -->
-    <!-- <script src="problem2.js"></script> -->
+    <script src="problem1.js"></script>
+    <script src="problem2.js"></script>
     <script src="problem3.js"></script>
-    <!-- <script src="problem4.js"></script> -->
-    <!-- <script src="problem5.js"></script> -->
+    <script src="problem4.js"></script>
+    <script src="problem5.js"></script>
   </body>
 </html>
