--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
         <!-- <li>
           <a href="24-rock_paper_scissor_game/RPSG/">24 - RPSG Activity</a>
         </li> -->
+        <li>
+          <a href="25-async_javascript_exercises/"
+            >25 - async javascript exercises</a
+          >
+        </li>
       </ul>
 
       <ul>
