--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
             >25 - async javascript exercises</a
           >
         </li>
+        <li>
+          <a href="26-javascript_objects/">26 - javascript objects</a>
+        </li>
       </ul>
 
       <ul>
