changed the gif and filenames

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -2,10 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>Weather App</title>
   </head>
   <body>
@@ -35,7 +34,7 @@
         <div id="weather-icon-container">
           <img
             id="weather-icon"
-            src="src/question.gif"
+            src="https://media3.giphy.com/media/Xejz3ZWoOpnRktb6Ok/giphy.gif?cid=6c09b95225hbvw9772zhelq03yaub185qfhlptiswniwg15q&ep=v1_stickers_related&rid=giphy.gif&ct=s"
             alt="an image of current weather"
           />
         </div>
