--- a/24-rock_paper_scissor_game/RPSG/index.html
+++ b/24-rock_paper_scissor_game/RPSG/index.html
@@ -59,6 +59,6 @@
         <button type="button">Scissor</button>
       </section>
     </div>
-    <script src="main.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
