--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@
         <li>
           <a href="MP1/">MP1 - Major Project 1</a>
         </li>
+        <li>
+          <a href="24-rock_paper_scissor_game/RPSG/">Rock Paper Scissors Game</a>
+        </li>
       </ul>
     </div>
 
-    <script src="main.js"></script>
-  </body>
-</html>
+    <script src="main.js"></scri
