--- a/index.html
+++ b/index.html
@@ -138,9 +138,18 @@
           <a href="MP1/">MP1 - Major Project 1</a>
         </li>
         <li>
-          <a href="24-rock_paper_scissor_game/RPSG/">Rock Paper Scissors Game</a>
+          <a href="24-rock_paper_scissor_game/RPSG/"
+            >Rock Paper Scissors Game</a
+          >
+        </li>
+        <li>
+          <a href="https://khaileidoscope.github.io/weather-app/"
+            >weather-app</a
+          >
         </li>
       </ul>
     </div>
 
     <script src="main.js"></script>
+  </body>
+</html>
