updated all folders and it's contents

--- a/dictionary-app/index.html
+++ b/dictionary-app/index.html
@@ -8,20 +8,78 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&family=Cantarell&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="animated.css" />
     <title>Dictionary App</title>
   </head>
   <body>
+    <!-- animated css -->
+    <svg preserveAspectRatio="xMidYMid slice" viewBox="10 10 80 80">
+      <defs>
+        <style>
+          @keyframes rotate {
+            0% {
+              transform: rotate(0deg);
+            }
+            100% {
+              transform: rotate(360deg);
+            }
+          }
+          .out-top {
+            animation: rotate 20s linear infinite;
+            transform-origin: 13px 25px;
+          }
+          .in-top {
+            animation: rotate 10s linear infinite;
+            transform-origin: 13px 25px;
+          }
+          .out-bottom {
+            animation: rotate 25s linear infinite;
+            transform-origin: 84px 93px;
+          }
+          .in-bottom {
+            animation: rotate 15s linear infinite;
+            transform-origin: 84px 93px;
+          }
+        </style>
+      </defs>
+      <path
+        fill="#9b5de5"
+        class="out-top"
+        d="M37-5C25.1-14.7,5.7-19.1-9.2-10-28.5,1.8-32.7,31.1-19.8,49c15.5,21.5,52.6,22,67.2,2.3C59.4,35,53.7,8.5,37-5Z"
+      />
+      <path
+        fill="#f15bb5"
+        class="in-top"
+        d="M20.6,4.1C11.6,1.5-1.9,2.5-8,11.2-16.3,23.1-8.2,45.6,7.4,50S42.1,38.9,41,24.5C40.2,14.1,29.4,6.6,20.6,4.1Z"
+      />
+      <path
+        fill="#00bbf9"
+        class="out-bottom"
+        d="M105.9,48.6c-12.4-8.2-29.3-4.8-39.4.8-23.4,12.8-37.7,51.9-19.1,74.1s63.9,15.3,76-5.6c7.6-13.3,1.8-31.1-2.3-43.8C117.6,63.3,114.7,54.3,105.9,48.6Z"
+      />
+      <path
+        fill="#00f5d4"
+        class="in-bottom"
+        d="M102,67.1c-9.6-6.1-22-3.1-29.5,2-15.4,10.7-19.6,37.5-7.6,47.8s35.9,3.9,44.5-12.5C115.5,92.6,113.9,74.6,102,67.1Z"
+      />
+    </svg>
+    <!-- animated css -->
+
     <div id="app">
-      <!-- title -->
-      <h1 class="title">English Dictionary</h1>
       <div class="dictionary-container">
+        <!-- title -->
+        <h1 class="title">English Dictionary</h1>
         <!-- start of search box input -->
         <form class="search-box">
-          <input type="text" id="search-input" placeholder='"Enter Keyword"' />
+          <input
+            id="search-input"
+            type="text"
+            placeholder='"Enter Keyword"'
+          />
           <!-- search btn -->
           <button id="search-btn">
             SEARCH
@@ -50,26 +108,27 @@
             </li>
             <li class="word-type">
               <div class="details">
-                <p>noun</p>
                 <span>/pronunciation/</span>
               </div>
             </li>
 
             <div class="word-content">
-              <!-- partOfSpeech and Phonetics as types -->
-
+              <!-- partOfSpeech -->
+              <li class="word-speech">
+                <h4>partOfSpeech 1</h4>
+              </li>
               <!-- meaning of keyword -->
               <li class="word-meaning">
                 <div class="details">
                   <h3>Meaning:</h3>
-                  <span>Meaning of the keyword entered</span>
+                  <span></span>
                 </div>
               </li>
               <!-- sentence samples -->
               <li class="word-samples">
                 <div class="details">
                   <h3>Example:</h3>
-                  <span> A sentence sample of keyword. </span>
+                  <span> </span>
                 </div>
               </li>
               <!-- synonyms of keyword -->
@@ -77,10 +136,7 @@
                 <div class="details">
                   <h3>Synonyms</h3>
                   <div class="synonyms-list">
-                    <span>similar,</span>
-                    <span>similar,</span>
-                    <span>similar,</span>
-                    <span>similar,</span>
+                    <span>r</span>
                   </div>
                 </div>
               </li>
@@ -89,9 +145,42 @@
                 <div class="details">
                   <h3>Antonyms</h3>
                   <div class="antonyms-list">
-                    <span>opposite,</span>
-                    <span>opposite,</span>
-                    <span>opposite,</span>
+                    <span></span>
+                  </div>
+                </div>
+              </li>
+              <!-- 2nd definition -->
+              <li class="word-speech">
+                <h4>partOfSpeech 2</h4>
+              </li>
+              <!-- meaning of keyword -->
+              <li class="word-meaning">
+                <div class="details">
+                  <h3></h3>
+                  <span></span>
+                </div>
+              </li>
+              <!-- sentence samples -->
+              <li class="word-samples">
+                <div class="details">
+                  <h3>Example:</h3>
+                  <span> </span>
+                </div>
+              </li>
+              <!-- synonyms of keyword -->
+              <li class="word-synonyms">
+                <div class="details">
+                  <h3>Synonyms</h3>
+                  <div class="synonyms-list">
+                    <span>similar</span>
+                  </div>
+                </div>
+              </li>
+              <!-- antonyms of keyword -->
+              <li class="word-antonyms">
+                <div class="details">
+                  <h3>Antonyms</h3>
+                  <div class="antonyms-list">
                     <span>opposite</span>
                   </div>
                 </div>
@@ -104,6 +193,6 @@
         <p>Coded by <span>Khail</span> & <span>Alvin</span></p>
       </div>
     </div>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="try.js"></script>
   </body>
 </html>
