update index.html and some files

--- a/index.html
+++ b/index.html
@@ -125,11 +125,32 @@
         </li> -->
         <li>
           <a href="25-async_javascript_exercises/"
-            >25 - async javascript exercises</a
+            >25 - async_javascript_exercises</a
           >
         </li>
         <li>
-          <a href="26-javascript_objects/">26 - javascript objects</a>
+          <a href="26-javascript_objects/">26 - javascript_objects</a>
+        </li>
+        <li>
+          <a href="27-javascript_calculator/">27 - javascript_calculator</a>
+        </li>
+        <li>
+          <a href="28-debugging_javascript/">28 - debugging_javascript</a>
+        </li>
+        <li>
+          <a href="29-organizing-javascript/">29 - organizing_javascript</a>
+        </li>
+        <li>
+          <a href="30-LibrarySample/">30 - Library Sample</a>
+        </li>
+        <li>
+          <a href="31-async-JS/">31 - async_JS</a>
+        </li>
+        <li>
+          <a href="32-JSON-sat/">32 - JSON (saturday)</a>
+        </li>
+        <li>
+          <a href="33-react-introduction/">33 - React Introduction</a>
         </li>
       </ul>
 
