--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
         <li>
           <a href="33-react-introduction/">33 - React Introduction</a>
         </li>
+        <li>
+          <a href="34-react-fundamentals/"> 34 - react fundamentals</a>
+        </li>
       </ul>
 
       <ul>
