--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
         <li>
           <a href="34-react-fundamentals/"> 34 - react fundamentals</a>
         </li>
+        <li>
+          <a href="35-react-complex-state/">35 - react complex state</a>
+        </li>
       </ul>
 
       <ul>
