--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <a href="35-react-complex-state/">35 - react complex state</a>
         </li>
         <li>
-          <a href=""></a>
+          <a href="">...</a>
         </li>
       </ul>
 
