created new folders

--- a/translator-app/index.html
+++ b/translator-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/translate.svg" />
+    <link rel="icon" type="image/svg+xml" href="images/translate.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Translator-App</title>
     <!-- Font Awesome -->
@@ -67,10 +67,10 @@
     <div class="container">
       <nav>
         <div class="logo">
-          <img src="/public/translate.svg" alt="translator-logo" />
+          <img src="/images/translate.svg" alt="translator-logo" />
           <h1>Translator</h1>
         </div>
-        <img src="/public/moon.png" alt="dark-mode" id="dark-mode" />
+        <img src="/images/moon.png" alt="dark-mode" id="dark-mode" />
       </nav>
       <div class="wrapper">
         <div class="text-input">
@@ -114,8 +114,8 @@
       <!-- translate button -->
       <button>Translate</button>
     </div>
-    <script type="module" src="JavaScript/darkmode.js"></script>
-    <script type="module" src="JavaScript/countries.js"></script>
-    <script type="module" src="JavaScript/main.js"></script>
+    <script type="module" src="javaScript/darkmode.js"></script>
+    <script type="module" src="javaScript/countries.js"></script>
+    <script type="module" src="javaScript/main.js"></script>
   </body>
 </html>
